[gd_scene load_steps=9 format=3 uid="uid://c00rbvohyldnx"]

[ext_resource type="PackedScene" uid="uid://4fdx6lkx5qrq" path="res://src/levels/missions/missions_bg.tscn" id="1_u7eep"]
[ext_resource type="Script" uid="uid://c0u8cifgtx23k" path="res://src/menus/mission/mission.gd" id="1_w6lnb"]
[ext_resource type="PackedScene" uid="uid://m3584wxp2p80" path="res://src/menus/ui/button_home/button_home.tscn" id="2_77xhu"]
[ext_resource type="Texture2D" uid="uid://c8pitygjprffo" path="res://src/menus/assets/2d/Pipe/Pipe_36x11.png" id="3_cnq5l"]
[ext_resource type="PackedScene" uid="uid://dvk2bxir4lti2" path="res://src/menus/mission/ui/mission_list/mission_list.tscn" id="6_60hqj"]
[ext_resource type="PackedScene" uid="uid://s7xddbi1s8fb" path="res://src/menus/ui/button_single/button_single.tscn" id="6_cnq5l"]
[ext_resource type="PackedScene" uid="uid://duwt6bvsn5cvh" path="res://src/menus/mission/ui/team_picker/team_picker.tscn" id="6_x3uo8"]
[ext_resource type="PackedScene" uid="uid://bwe7i1bhkqnjp" path="res://src/menus/mission/ui/countdown_container/countdown_container.tscn" id="7_j2owq"]

[node name="Mission" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(604, 132)
mouse_filter = 2
script = ExtResource("1_w6lnb")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="GalleryBackground" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_u7eep")]

[node name="Pipe2" type="TextureRect" parent="."]
offset_left = 720.0
offset_top = 221.0
offset_right = 756.0
offset_bottom = 233.0
rotation = -1.5708
scale = Vector2(2, 2)
texture = ExtResource("3_cnq5l")

[node name="Pipe" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 423.0
offset_top = 334.0
offset_right = 459.0
offset_bottom = 346.0
scale = Vector2(2, 2)
texture = ExtResource("3_cnq5l")

[node name="TeamPicker" parent="." instance=ExtResource("6_x3uo8")]
layout_mode = 1
anchor_left = 0.402778
anchor_top = 0.308642
anchor_right = 0.864583
anchor_bottom = 0.774691
offset_right = 0.0
offset_bottom = -3.05176e-05

[node name="MissionList" parent="." instance=ExtResource("6_60hqj")]
layout_mode = 1
anchor_left = 0.173611
anchor_top = 0.179012
anchor_right = 0.375
anchor_bottom = 0.910494

[node name="MainButton" parent="." instance=ExtResource("6_cnq5l")]
custom_minimum_size = Vector2(192, 55)
layout_mode = 1
anchor_left = 0.552951
anchor_top = 0.810185
anchor_right = 0.675347
anchor_bottom = 0.851852
offset_right = 51.0
offset_bottom = 28.0
label = "Start"

[node name="ButtonBack" parent="." instance=ExtResource("2_77xhu")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.841146
anchor_top = 0.28858
anchor_right = 0.894965
anchor_bottom = 0.38426
offset_right = -21.9996
offset_bottom = -22.0001
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]

[node name="CountdownContainer" parent="." instance=ExtResource("7_j2owq")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55816
anchor_top = 0.194444
anchor_right = 0.713542
anchor_bottom = 0.265432
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[connection signal="team_changed" from="TeamPicker" to="." method="_update_buttons"]
[connection signal="mission_selected" from="MissionList" to="." method="_on_mission_selected"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_refresh_countdown"]
